# grConvert

./: .Rbuildignore  .travis.yml  DESCRIPTION  NAMESPACE  README  README.md  cleanup  configure  configure.ac
R/: convert.R.in
inst/: NEWS.Rd
man/: capabilites.Rd  convertPicture.Rd
src/: Makevars.in  config.h.in  convert.c  convert.h
tests/: Georgia.ps  Michigan.ps  Mississippi.ps  New_Zealand.ps  test-pdf-in-ps-out.R.in  test-pdf-in-svg-out.R.in  test-ps-in-ps-out.R.in  test-ps-in-svg-out.R.in  test-svg-in-ps-out.R.in  test-svg-in-svg-out.R.in
